new blog post and illustration

--- a/fraud/index.html
+++ b/fraud/index.html
@@ -26,22 +26,97 @@
 		</header>
 	
 		<article>
-			<section>Time</section>
-			<section></section>
+			<section>
+				<h2>Time Wasted</h2>
+				<i class="icon-time"></i>
+				<span>2 days</span>
+			</section>
 		</article>
 		
 		<article>
-			<section>Money</section>
-			
+			<section>
+				<h2>Money Wasted</h2>
+				<i class="icon-money"></i>
+				<span>A Shit Ton (but not mine)</span>
+			</section>
 		</article>
 		
 		<article>
-			<section>Highlight Quotes</section>
+			<section>
+				<h2 style="top:2em;">Highlights</h2>
+				<img src="piss.svg" class="vector" style="width: 105px;">
+				<span>The two douchey plaintiff lawyers read depositions in monotone dialogue. </span>
+				<span style="text-align: left;">Highlights include:</span>
+				<div>
+					<blockquote><img src="cock.svg"> Question - "Were you drinking all night?"</blockquote>
+					<br />
+					<blockquote><img src="face.svg"> Adam's Retort - "I think that paints a picture that we were drunk when we left."</blockquote>
+				</div>
+				<br />
+				<div>
+					<blockquote><img src="cock.svg"> Question - "Why didn't you call the police?"</blockquote>
+					<br />
+					<blockquote><img src="face.svg"> Clay's Retort - "We were scared out of our gourd!"</blockquote>
+					<blockquote>Douchbag plaintiff attorney went on to repeat this 3x</blockquote>
+				</div>
+				<br />
+				<div>
+					<blockquote><img src="cock.svg"> Question - "Do you know how fast you are moving 3 feet at 7mph?"</blockquote>
+					<br />
+					<blockquote><img src="face.svg"> My Retort - "7mph"</blockquote>
+			</section>
 		</article>
 		
 		<article>
-			<section>Mistrial</section>
+			<section>
+				<h2>Miss Trial</h2>
+				<img src="banana.svg" class="vector">
+				<span>Mistrial occurred when expert witness let slip that plaintiff had previously been in prison for sexual assault.</span>
+			</section>
 		</article>
+
+		<article>
+			<section>
+				<h2>Account of Events</h2>
+				<img src="brain.svg" class="vector">
+				<span>Plantiff's witness gave an excellent account of events.</span>
+				<span>X's are where he was</span>
+				<span>rectangle is where my car was</span>
+				<span>O is the man that said i ran him over is</span>
+				<br />
+				<img src="events.svg" class="vector" style="max-width:400px; width:100%;">
+			</section>
+		</article>
+
+		<article>
+			<section>
+				<h2>Police Training</h2>
+				<img src="badge.svg" class="vector" style="width:120px;">
+				<span>Did you know police academy/training/whatever is <strong>6 months</strong>?</span>
+				<span>That is it!</span>
+				<span>Six months and you get a badge and gun</span>
+				<span>Benders and orgies have lasted longer</span>
+			</section>
+		</article>
+
+		<article>
+			<section>
+				<h2>Amount of Bullshit</h2>
+				<img src="poop.svg" class="vector">
+				<span>Way Too Much</span>
+			</section>
+		</article>
+		
+		<article>
+			<section>
+				<h2>Until Next Mediation</h2>
+				<img src="sloth.svg" class="vector" style="width:100px;">
+				<span>Will keep you posted!</span>
+				<span><audio src="pac-man.mp3" preload="auto" controls></audio></span>
+			</section>
+		</article>
+
+		<article><span>Icons By: Michael Rowe, from The Noun Project</span></article>
 		
 	</main>
 	
